--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,800&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Poppins', sans-serif;
+    background-color: hsl(0, 0%, 94%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+    background-color: white;
+    padding: 1em;
+    margin: 5em 33em;
+    border-radius: 10px;
+    border-bottom-right-radius: 100px;
+}
+
+.cima {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    line-height: 0.5em;
+}
+
+input {
+    width: 80%;
+    height: 2.5em;
+}
+
+.btni {
+    background-color: hsl(259, 100%, 65%);
+    border: none;
+    border-style: hidden;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    position: absolute; 
+    top: 24.5%; 
+    left: 58.5%; 
+    transform: translate(-50%, -50%); 
+  }
+
+img {
+    width: 100%;
+}
+
+hr {
+    background-color: hsl(0, 0%, 8%);
+    width: 330%;
+}
+span{
+    color: hsl(259, 100%, 65%);
+}
+h2{
+    font-style: bold;
+    font-size: 3em;
+    font-weight: 800;
+}
+.baixo{
+    line-height: 0.5em;
 }
